Pro 1.0.7
=========

Fixes:
 - MODELER-454: Impossible to download Pro controller from Pro Designer
 - MODELER-455: Incorrectly referenced css

Pro 1.0.6
=========

Fixes:
 - MODELER-446: Default webapp port for controller should be changed to 8688

New features:
 - In edit/new macro window, command tree must include device name (MODELER-361)

Pro 1.0.5
=========

Fixes:
 - MODELER-409: NPE on autosave from UI design
 - MODELER-418: Hibernate 'lazy initialization' exception on save (2)

New features:
 - contentType attribute on HTTP protocol (MODELER-416)
 - Have protocol names ordered alphabetically for commands (MODELER-417)
 - Add pulseTime parameter to AMX protocol (MODELER-434)
 - Enfore unicity of element id in schemas (MODELER-412)
 - Add 'data' attribute to protocol xml for 1-wire (MODELER-435)

Pro 1.0.4
=========

Fixes:
 - MODELER-410: KNX import not working anymore

Pro 1.0.3
=========

Fixes:

 - MODELER-346: regexp validation for IP fields in TCP
   and Telnet protocols were wrong. Validations have
   been disabled.
 - MODELER-399: Order of windows

New features:
 - LPD protocol support (MODELER-406)
 - panStamps Lagarto configuration (MODELER-397)
 - Round-robin database (RRD) configuration (MODELER-394)

Pro 1.0.2
=========

- MODELER-396: org.springframework.orm.hibernate3.HibernateSystemException
  when saving UI design
- MODELER-398: Setting a sensor on a Web element does not work
- MODELER-392: Fractional Widget Coordinates when Browser
  has non-default zoom

Pro 1.0.1
=========

- MODELER-384: Property form title is wrong for webview
  and color picker components
- MODELER-360: Command, Sensor, Switch names are
  not correctly encoded/decoded
- MODELER-385: Double scrollbar on widget selection
- MODELER-391: Add Domintell connection configuration
  possibility
- MODELER-395: Incorrect password field generated
  in panel.xml for Web element
- MODELER-389: LazyInitializationException on
  Device.deviceAttrs

Designer 2.13.6 (2012-09-20 Rosemary)