@@ -296,6 +296,22 @@ If it's true, controller will auto-detect its groupmembers with multicast.
     </config>
   </category>
 
+  <category name="marantz_avr">
+    <description>
+        <![CDATA[
+          Configuration for IP control of Marantz A/V receivers.
+        ]]>
+      </description>
+    <config name="marantz_avr.address" value="192.168.1.1"
+      validation="(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)">
+      <hint>
+          <![CDATA[
+           Address of the Marantz receiver, mandatory.
+          ]]>
+        </hint>
+    </config>
+  </category>
+
   <category name="z-wave">
     <description>
         <![CDATA[
