@@ -1,0 +1,48 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!--
+
+ OpenRemote, the Home of the Digital Home.
+ Copyright 2008-2013, OpenRemote Inc.
+
+ See the contributors.txt file in the distribution for a
+ full listing of individual contributors.
+
+ This is free software; you can redistribute it and/or modify it
+ under the terms of the GNU General Public License as
+ published by the Free Software Foundation; either version 3.0 of
+ the License, or (at your option) any later version.
+
+ This software is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+ You should have received a copy of the GNU General Public
+ License along with this software; if not, write to the Free
+ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+
+-->
+
+<!--
+ |  Marantz AVR protocol configuration for OpenRemote Designer.
+ |  See http://www.customizedcontractorservices.com/New%20Updates/Downloads/Marantz/Product%20Manuals/RS%20232.IR%20Codes/SR7005%20RS-232C%20Ethernet%20Control%20Spec.pdf
+ |  for protocol specification.
+ |
+ |  Author: Eric Bariaux
+ +-->
+<openremote xmlns="http://www.openremote.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.openremote.org protocol.xsd">
+	<protocol displayName="Marantz A/V receivers" tagName="marantz_avr">
+		<attr name="command" label="Command" options="POWER,MUTE,VOLUME,INPUT,SURROUND_MODE,NETWORK_CONTROL,UP,DOWN,LEFT,RIGHT,ENTER,RETURN">
+			<validations>
+				<allowBlank>false</allowBlank>
+			</validations>
+		</attr>
+		<attr name="parameter" label="Parameter" tooltipMessage="Optional parameter, command specific">
+			<validations>
+				<allowBlank>true</allowBlank>
+			</validations>
+		</attr>
+	</protocol>
+</openremote>
